--- a/Audio and video/第一章 音视频基础知识.md
+++ b/Audio and video/第一章 音视频基础知识.md
@@ -63,3 +63,45 @@
 
 ### 1.5.1 帧率
 
+用于测量显示帧数的量度，测量单位是每秒显示帧数（frame per second，fps）或"赫兹"
+
+### 1.5.2 分辨率
+
+视频分辨率：视频成像产品所形成的图像大小或尺寸
+
+### 1.5.3 刷新率
+
+屏幕每秒屏幕被刷新的次数，刷新率氛围垂直刷新率和水平刷新率，一般提到的刷新率指的是垂直刷新率
+
+### 1.5.4 编码格式
+
+编码的目的是压缩数据量，采用编码算法压缩冗余数据。常用的编码格式：
+
+1. MPEG
+2. H.26X
+
+### 1.5.5 封装格式
+
+把编码后的音视频数据以一定的格式封装到一个容器里，常见封装格式有：MKV、AVI、TS 等
+
+### 1.5.6 码率
+
+码率就是比特率，也就是单位时间播放连续的媒体的比特数量。
+
+比特率越高，带宽消耗越多。
+
+文件大小（b）= 码率（b/s）x 时常（s）
+
+### 1.5.7 画质与码率
+
+视频质量和码率、编码算法都有关系，不一定码率越大，视频质量越好。
+
+### 1.5.9 YUV 和 RGB
+
+- YUV 一种颜色编码方法
+  - Y：亮度
+  - UV 代表色差，两者是构成颜色的两个分量
+- RGB：一种颜色空间模型，通过对红（R）、绿（G）和蓝（B）3 个颜色通道的变化以及他们之间相互叠加来得到各式各样的颜色
+
+### 1.5.10 视频帧和音频帧
+
